--- a/assets/stylesheets/hand.css
+++ b/assets/stylesheets/hand.css
@@ -13,7 +13,17 @@
 
 #deck {
 	display: flex;
+	flex-direction: column;
 	position: fixed;
 	bottom: 20px;
 	left: 10px;
+}
+
+#deck-count {
+	display: block;
+	text-align: center;
+	margin-bottom: 10px;
+	margin-left: 10px;
+	font-size: 1.3em;
+	color: var(--c-white);
 }
